--- a/Project.toml
+++ b/Project.toml
@@ -4,3 +4,4 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
