--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
 [deps]
 BetaML = "024491cd-cc6b-443e-8034-08ea7eb7db2b"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
-Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
 LIBSVM = "b1bec4e5-fd48-53fe-b0cb-9723c09d164b"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
@@ -11,6 +12,7 @@ MLJDecisionTreeInterface = "c6f25543-311c-4c74-83dc-3ea6d1015661"
 MLJLIBSVMInterface = "61c7150f-6c77-4bb1-949c-13197eac2a52"
 MLJLinearModels = "6ee0df7b-362f-4a72-a706-9e79364fb692"
 MLJModels = "d491faf4-2d78-11e9-2867-c94bc002c0b7"
+NearestNeighborModels = "636a865e-7cf4-491e-846c-de09b730eb36"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
