JMLDL package added

--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
+JMLDL = "bc369059-268b-4ec8-bac2-83ab018fab3b"
 LIBSVM = "b1bec4e5-fd48-53fe-b0cb-9723c09d164b"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
