--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,8 @@ CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-JMLDL = "bc369059-268b-4ec8-bac2-83ab018fab3b"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+Nova = "3f482e55-661e-4eec-8a53-436578a72954"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
