--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ LIBSVM = "b1bec4e5-fd48-53fe-b0cb-9723c09d164b"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
 MLJLIBSVMInterface = "61c7150f-6c77-4bb1-949c-13197eac2a52"
+MLJModels = "d491faf4-2d78-11e9-2867-c94bc002c0b7"
 NearestNeighborModels = "636a865e-7cf4-491e-846c-de09b730eb36"
 Nova = "3f482e55-661e-4eec-8a53-436578a72954"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
