--- a/Project.toml
+++ b/Project.toml
@@ -9,9 +9,12 @@ LIBSVM = "b1bec4e5-fd48-53fe-b0cb-9723c09d164b"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
 MLJLIBSVMInterface = "61c7150f-6c77-4bb1-949c-13197eac2a52"
+MLJLinearModels = "6ee0df7b-362f-4a72-a706-9e79364fb692"
 MLJModels = "d491faf4-2d78-11e9-2867-c94bc002c0b7"
+MLJMultivariateStatsInterface = "1b6a4a23-ba22-4f51-9698-8599985d3728"
 NearestNeighborModels = "636a865e-7cf4-491e-846c-de09b730eb36"
 Nova = "3f482e55-661e-4eec-8a53-436578a72954"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
