--- a/Project.toml
+++ b/Project.toml
@@ -1,19 +1,14 @@
 [deps]
-BetaML = "024491cd-cc6b-443e-8034-08ea7eb7db2b"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LIBSVM = "b1bec4e5-fd48-53fe-b0cb-9723c09d164b"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
-MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
-MLJLIBSVMInterface = "61c7150f-6c77-4bb1-949c-13197eac2a52"
-MLJLinearModels = "6ee0df7b-362f-4a72-a706-9e79364fb692"
-MLJModels = "d491faf4-2d78-11e9-2867-c94bc002c0b7"
-MLJMultivariateStatsInterface = "1b6a4a23-ba22-4f51-9698-8599985d3728"
-NearestNeighborModels = "636a865e-7cf4-491e-846c-de09b730eb36"
 NovaML = "3f482e55-661e-4eec-8a53-436578a72954"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
