--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ NovaML = "3f482e55-661e-4eec-8a53-436578a72954"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
