--- a/Project.toml
+++ b/Project.toml
@@ -16,3 +16,4 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
