--- a/Project.toml
+++ b/Project.toml
@@ -18,5 +18,6 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Snowball = "fb8f903a-0164-4e73-9ffe-431110250c3b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 WordTokenizers = "796a5d58-b03d-544a-977e-18100b691f6e"
