--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Languages = "8ef0a80b-9436-5d2c-a485-80b904378c43"
+MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 NovaML = "3f482e55-661e-4eec-8a53-436578a72954"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
